--- a/bors.toml
+++ b/bors.toml
@@ -1,3 +1,3 @@
-status = ["buildbot/yk-buildbot-build-script-hw"]
-timeout_sec = 300 # 10 minutes
+status = ["buildbot/buildbot-build-script"]
+timeout_sec = 10800 # 3 hours
 delete_merged_branches = true
