Track initialised and uninitialised yk locations
Remove reallocarray in favour of calloc
Change YkLocations to be stored as pointers
Change lyk interface to reflect its "hooks" functionality
Move tests to a separate test script and enabled serialised all.lua test suite
Added logging in lyk module for ease of debugging
Updated readme with debugging instructions

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,8 @@ SYSCFLAGS=
 SYSLDFLAGS=
 SYSLIBS=
 
-MYCFLAGS=
+# YKFIXME: LYK_DEBUG is a debug flag for the Yk integration. Once YkLua is stable we can remove it.
+MYCFLAGS=-DLYK_DEBUG
 MYLDFLAGS=
 MYLIBS=
 MYOBJS=
